# nepali_unicoder

./: .gitignore  .pre-commit-config.yaml  404.html  DEV.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  test.yml
api_reference/: index.html
docs/: api_reference.md  index.md  preeti_mappings.md  usage.md
preeti_mappings/: index.html
search/: search_index.json
src/nepali_unicoder/: __main__.py  convert.py  engine.py  fst.py  loader.py  mappings.py  rules.json  rules.py  tokenizer.py  trie.py  word_maps.json  word_maps.txt
src/nepali_unicoder/data/: preeti_rules.json  roman_rules.json
tests/: test_components.py  test_conversion.py
usage/: index.html
