[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali_unicoder"
version = "0.1.0"
description = "A Python package for Roman to Nepali (Devanagari) transliteration"
authors = [
  { name="realsanjeev", email="075bei033.sanjeev@pcampus.edu.np" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/realsanjeev/nepali_unicoder"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]

# TODO(realsanjeev): Add the dev dependencies like pre-commit